[gd_scene load_steps=2 format=3 uid="uid://dgmhh1y8w5ry"]

[ext_resource type="Script" uid="uid://xtqu57vwamxb" path="res://src/ui/world_map.gd" id="1_h5xyc"]

[node name="WorldMap" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_h5xyc")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
text = "Select Region"
horizontal_alignment = 1

[node name="RegionContainer" type="VBoxContainer" parent="."]
layout_mode = 1

[node name="RegionInfoPanel" type="PanelContainer" parent="."]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="RegionInfoPanel"]
layout_mode = 2

[node name="RegionName" type="Label" parent="RegionInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Select a region to begin"

[node name="RegionDescription" type="Label" parent="RegionInfoPanel/VBoxContainer"]
layout_mode = 2
text_overrun_behavior = 3

[node name="RegionStats" type="Label" parent="RegionInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="RegionInfoPanel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Start Game"
